Remise au propre CmdLineParser jusqu'à l'exo 7